--- a/XLNET_with_undersampling.ipynb
+++ b/XLNET_with_undersampling.ipynb
@@ -520,6 +520,26 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Lmo-kT4oZcUG",
+        "colab_type": "text"
+      },
+      "source": [
+        "# XLNet Finetuning with Dropout"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "nePX7bzmZiaS",
+        "colab_type": "text"
+      },
+      "source": [
+        "This section of the file contains XLNet finetuning with dropout regularization."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "zJ_AKgEsyiAc",
@@ -635,6 +655,12 @@
         "from tqdm import tqdm, trange\n",
         "import matplotlib.pyplot as plt\n",
         "%matplotlib inline\n",
+        "from sklearn.metrics import classification_report, accuracy_score, confusion_matrix\n",
+        "from torch.autograd.function import InplaceFunction\n",
+        "import torch.nn.init as init\n",
+        "import torch.nn.functional as F\n",
+        "\n",
+        "from torch.nn import Parameter\n",
         "\n"
       ],
       "execution_count": null,
@@ -652,8 +678,8 @@
         "outputId": "6c00b8dc-d535-4821-be0c-ff4670c9043a"
       },
       "source": [
-        "import torch\n",
         "\n",
+        "#For GPU usage\n",
         "if torch.cuda.is_available():       \n",
         "    device = torch.device(\"cuda\")\n",
         "    print(f'There are {torch.cuda.device_count()} GPU(s) available.')\n",
@@ -683,6 +709,7 @@
         "colab": {}
       },
       "source": [
+        "#Read file from Google Drive\n",
         "df=pd.read_csv(\"/content/gdrive/My Drive/Colab Notebooks/covid_labelled.csv\", encoding='utf-8',usecols=['Text','Num_Sentiment'])"
       ],
       "execution_count": null,
@@ -696,6 +723,7 @@
         "colab": {}
       },
       "source": [
+        "#Mapping labels\n",
         "df.loc[:,'sentiment'] = df.Num_Sentiment.map({-1:2,0:0,1:1})"
       ],
       "execution_count": null,
@@ -713,12 +741,12 @@
         "outputId": "c06a1479-8c2d-4f45-acbc-162105c34a0c"
       },
       "source": [
-        "from sklearn.model_selection import train_test_split\n",
+        "#Undersample the data \n",
         "\n",
         "X = df.Text.values.reshape(-1,1)\n",
         "y = df.sentiment.values.reshape(-1,1)\n",
         "\n",
-        "from imblearn.under_sampling import RandomUnderSampler\t\n",
+        "\n",
         "sampler = RandomUnderSampler(ratio={0:3000,1:3000,2:3000})\n",
         "X_rs, y_rs = sampler.fit_resample(X, y)\n",
         "\n",
@@ -856,6 +884,7 @@
         "outputId": "4e2d52a0-1e5d-4ffd-9baa-6a136dff0b32"
       },
       "source": [
+        "#One hot encoding of target labels\n",
         "one_hot = pd.get_dummies(df[\"sentiment\"])\n",
         "df.drop(['sentiment'],axis=1,inplace=True)\n",
         "df = pd.concat([df,one_hot],axis=1)\n",
@@ -955,7 +984,7 @@
         "colab": {}
       },
       "source": [
-        "from sklearn.model_selection import train_test_split\n",
+        "#Split data into train and test\n",
         "\n",
         "train,test =\\\n",
         "    train_test_split(df, test_size=0.2, random_state=42)"
@@ -971,6 +1000,7 @@
         "colab": {}
       },
       "source": [
+        "#Function for tokenizer\n",
         "def plot_sentence_embeddings_length(text_list, tokenizer):\n",
         "    tokenized_texts = list(map(lambda t: tokenizer.tokenize(t), text_list))\n",
         "    tokenized_texts_len = list(map(lambda t: len(t), tokenized_texts))\n",
@@ -991,6 +1021,7 @@
         "colab": {}
       },
       "source": [
+        "#Initialize tokenizer\n",
         "tokenizer = XLNetTokenizer.from_pretrained('xlnet-base-cased', do_lower_case=True)"
       ],
       "execution_count": null,
@@ -1595,6 +1626,8 @@
         "colab": {}
       },
       "source": [
+        "#Function to train the model. \n",
+        "\n",
         "def train(model, num_epochs,\\\n",
         "          optimizer,\\\n",
         "          train_dataloader, valid_dataloader,\\\n",
@@ -1749,8 +1782,7 @@
         "colab": {}
       },
       "source": [
-        "import torch\n",
-        "from torch.autograd.function import InplaceFunction\n",
+        "#Mixout code which mixes vanilla network and dropout\n",
         "\n",
         "class Mixout(InplaceFunction):\n",
         "    # target: a weight tensor mixes with a input tensor\n",
@@ -1824,13 +1856,7 @@
         "colab": {}
       },
       "source": [
-        "import math\n",
-        "import torch\n",
-        "import torch.nn as nn\n",
-        "import torch.nn.init as init\n",
-        "import torch.nn.functional as F\n",
-        "\n",
-        "from torch.nn import Parameter\n",
+        "#Mixlinear module function\n",
         "\n",
         "#from mixout import mixout\n",
         "\n",
@@ -1902,7 +1928,7 @@
         "outputId": "5ce36bb3-6623-435a-a2ec-aa25bb95c49e"
       },
       "source": [
-        "#config = XLNetConfig()\n",
+        "#Initializee XLNet model and add classifier \n",
         "        \n",
         "class XLNetForMultiLabelSequenceClassification(torch.nn.Module):\n",
         "  \n",
@@ -2197,6 +2223,7 @@
         "colab": {}
       },
       "source": [
+        "#Initialize optimizer\n",
         "optimizer = AdamW(model2.parameters(), lr=2e-5, weight_decay=0.01, correct_bias=False)\n",
         "#scheduler = WarmupLinearSchedule(optimizer, warmup_steps=num_warmup_steps, t_total=num_total_steps)  # PyTorch scheduler"
       ],
@@ -2215,6 +2242,7 @@
         "outputId": "8c3aff77-8c75-4039-eb17-097895707f0d"
       },
       "source": [
+        "#Define training epocs and train the model\n",
         "num_epochs=2\n",
         "\n",
         "cwd = os.getcwd()\n",
@@ -2299,7 +2327,7 @@
         "outputId": "64c01830-e2a4-43c1-b819-75fab12767ee"
       },
       "source": [
-        "# Plot loss\n",
+        "# Plot loss vs number of epochs\n",
         "num_epochs = np.arange(len(train_loss_set))\n",
         "\n",
         "fig, ax = plt.subplots(figsize=(10, 5));\n",
@@ -2362,6 +2390,7 @@
         "colab": {}
       },
       "source": [
+        "#Function to predict the model on test data\n",
         "def generate_predictions(model, df, num_labels, device=\"cpu\", batch_size=32):\n",
         "  num_iter = math.ceil(df.shape[0]/batch_size)\n",
         "  \n",
@@ -2464,7 +2493,7 @@
         "outputId": "f9fee6b6-b489-472c-8429-a390fc3e9896"
       },
       "source": [
-        "from sklearn.metrics import accuracy_score\n",
+        "#Print accuracy score\n",
         "y_test=test.iloc[:,1:4].values\n",
         "accuracy_score(y_test,a)"
       ],
@@ -2577,12 +2606,53 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "nBWHljb_bp6B",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "#Print classification report\n",
+        "print('\\nClassification Report\\n')\n",
+        "y_pred=np.round(pred_probs)\n",
+        "print(classification_report(y_test, a, target_names=['Negative', 'Neutral', 'Positive']))"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "DvqYbakbbsXc",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "#Print confusion matrix\n",
+        "print(confusion_matrix(y_test.argmax(axis=1), y_pred.argmax(axis=1)))"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "12fqDschbtlk",
+        "colab_type": "text"
+      },
+      "source": [
+        "\n",
+        "# Finetune XLNet with Mixout Regularization"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "6tK4CcDS-DnI",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "#config = XLNetConfig()\n",
+        "#Initialize XLNet model for multiclass classification and add classifier and convert the linear layer to mixlinear with mixout percentage added \n",
         "        \n",
         "class XLNetForMultiLabelSequenceClassification(torch.nn.Module):\n",
         "  \n",
@@ -2662,6 +2732,7 @@
         "colab": {}
       },
       "source": [
+        "#Initialize optimizer\n",
         "optimizer = AdamW(model3.parameters(), lr=2e-5, weight_decay=0.01, correct_bias=False)\n",
         "#scheduler = WarmupLinearSchedule(optimizer, warmup_steps=num_warmup_steps, t_total=num_total_steps)  # PyTorch scheduler"
       ],
@@ -2680,6 +2751,7 @@
         "outputId": "967234fd-4980-448d-b9ef-bc01d3a17bb4"
       },
       "source": [
+        "#Train the model \n",
         "num_epochs=2\n",
         "\n",
         "cwd = os.getcwd()\n",
@@ -2759,7 +2831,7 @@
         "colab": {}
       },
       "source": [
-        "# Plot loss\n",
+        "# Plot loss vs number of epochs\n",
         "num_epochs = np.arange(len(train_loss_set))\n",
         "\n",
         "fig, ax = plt.subplots(figsize=(10, 5));\n",
@@ -2796,6 +2868,8 @@
         "colab": {}
       },
       "source": [
+        "#Function to generate predictions on test data\n",
+        "\n",
         "def generate_predictions(model, df, num_labels, device=\"cpu\", batch_size=32):\n",
         "  num_iter = math.ceil(df.shape[0]/batch_size)\n",
         "  \n",
@@ -2830,6 +2904,7 @@
         "colab": {}
       },
       "source": [
+        "#Generate predictions\n",
         "num_labels = len(label_cols)\n",
         "pred_probs = generate_predictions(model, test, num_labels, device=\"cuda\", batch_size=32)\n",
         "pred_probs"
@@ -2858,9 +2933,39 @@
         "colab": {}
       },
       "source": [
-        "from sklearn.metrics import accuracy_score\n",
+        "#Print accuracy score\n",
         "y_test=test.iloc[:,1:4].values\n",
         "accuracy_score(y_test,s)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "27_z9DJxcIVK",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "#Print classification report\n",
+        "print('\\nClassification Report\\n')\n",
+        "y_pred=np.round(pred_probs)\n",
+        "print(classification_report(y_test, s, target_names=['Negative', 'Neutral', 'Positive']))"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "RVUfrPJXcHfl",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "#Print confusion matrix\n",
+        "print(confusion_matrix(y_test.argmax(axis=1), y_pred.argmax(axis=1)))"
       ],
       "execution_count": null,
       "outputs": []
